--- a/apache flume/twitter.conf
+++ b/apache flume/twitter.conf
@@ -5,10 +5,10 @@ TwitterAgent.sinks = HDFS
 
 # Configuração do Source
 TwitterAgent.sources.Twitter.type = org.apache.flume.source.twitter.TwitterSource
-TwitterAgent.sources.Twitter.consumerKey = 54DAbhTBSXYAefplxQ4iXqqoK
-TwitterAgent.sources.Twitter.consumerSecret = HTKGXSwi3Cqt2xvHc8ZWnM4H2mIdDlAUAsBWu3JyJEXoX7M1tu
-TwitterAgent.sources.Twitter.accessToken = 703383646602981377-Cyd0aKLZnN7vRhj5ej1EusY7Oqc4hED
-TwitterAgent.sources.Twitter.accessTokenSecret = rafwJ6jdSI4ErDWerRIcAhIr1nPNdOwNiCks78ZGKeQJ9
+TwitterAgent.sources.Twitter.consumerKey = 
+TwitterAgent.sources.Twitter.consumerSecret = 
+TwitterAgent.sources.Twitter.accessToken = 
+TwitterAgent.sources.Twitter.accessTokenSecret = 
 TwitterAgent.sources.Twitter.keywords = bigdata, python, java, ai, database, nosql
 
 # Condiguração do Sink
