Modified .SQL models for incremental and partitioned upload into DW

--- a/dbt/models/meetime/meetime_external_table.yml
+++ b/dbt/models/meetime/meetime_external_table.yml
@@ -22,7 +22,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -32,7 +32,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -42,7 +42,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -99,7 +99,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -109,7 +109,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -119,7 +119,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -164,7 +164,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -174,7 +174,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -184,7 +184,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-01'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -262,7 +262,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -272,7 +272,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -282,7 +282,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -360,7 +360,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -370,7 +370,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -380,7 +380,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -491,7 +491,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -501,7 +501,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -511,7 +511,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -550,7 +550,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -560,7 +560,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -570,7 +570,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -654,7 +654,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -664,7 +664,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -674,7 +674,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -752,7 +752,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -762,7 +762,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -772,7 +772,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
@@ -802,7 +802,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "year=%Y"
@@ -812,7 +812,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "month=%m"
@@ -822,7 +822,7 @@ sources:
               vals:
                 macro: dbt.dates_in_range
                 args:
-                  start_date_str: '2021-06-13'
+                  start_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   end_date_str: '{{modules.datetime.date.today().strftime("%Y-%m-%d")}}'
                   in_fmt: "%Y-%m-%d"
                   out_fmt: "day=%d"
